- Update paths to live site - Fix typo in About

--- a/public/404.html
+++ b/public/404.html
@@ -107,14 +107,14 @@
     </style>
 </head>
 <body >
-    <a href="index.html"><img class="logo" src="./images/gj-logo-antiquewhite.png" alt="Logo saying 'GJ'" /></a>
+    <a href="https://www.gmjacobsdev.com"><img class="logo" src="./images/gj-logo-antiquewhite.png" alt="Logo saying 'GJ'" /></a>
     <div class="thankyou">
     <!-- <h1 class="check"><i class="fas fa-check-circle"></i></h1> -->
     <h1 class="thanks" data-aos="fade-up" data-aos-duration="1200">4<i class="far fa-surprise"></i>4</h1>
     <h1 data-aos="fade-up" data-aos-duration="1200">OOPS!</h1>
     <h3 data-aos="fade-up" data-aos-duration="1200">Looks like you're a little lost.</h3>
     <h3 data-aos="fade-up" data-aos-duration="1200">Let's get you back on track!</h3>
-    <a href="index.html" class="about"><button class="link" data-aos="fade-up" data-aos-duration="1200"> Take me Home</button></a>
+    <a href="https://www.gmjacobsdev.com" class="about"><button class="link" data-aos="fade-up" data-aos-duration="1200"> Take me Home</button></a>
     </div>
 
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
