--- a/public/thanks.html
+++ b/public/thanks.html
@@ -95,13 +95,13 @@
     </style>
 </head>
 <body >
-    <a href="index.html"><img class="logo" src="./images/gj-logo-antiquewhite.png" alt="Logo saying 'GJ'" /></a>
+    <a href="https://www.gmjacobsdev.com"><img class="logo" src="./images/gj-logo-antiquewhite.png" alt="Logo saying 'GJ'" /></a>
     <div class="thankyou">
     <!-- <h1 class="check"><i class="fas fa-check-circle"></i></h1> -->
     <svg class="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52"><circle class="checkmark__circle" cx="26" cy="26" r="25" fill="none"/><path class="checkmark__check" fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/></svg>
     <h1 class="thanks" data-aos="fade-up" data-aos-duration="1200">Thanks for submitting!</h1>
     <h3 data-aos="fade-up" data-aos-duration="1200">I will get back to you as soon as I can.</h3>
-    <a href="index.html" class="about"><button class="link" data-aos="fade-up" data-aos-duration="1200"> Return to site</button></a>
+    <a href="https://www.gmjacobsdev.com" class="about"><button class="link" data-aos="fade-up" data-aos-duration="1200"> Return to site</button></a>
     </div>
 
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
