Fix og image links in meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -18,11 +18,11 @@
     <meta name="description" property="og:description" content="Personal portfolio of Gabrielle Jacobs, a front-end web developer with a React focus. Currently open to full time developer positions or freelance work for small businesses and nonprofits. Contact me for inquiries." />
     <meta name="keywords" content="html, html5, css, css3, bootstrap, sass, javascript, react, development, design, web, wordpress, black owned" />
     <!-- Social Media Information -->
-    <meta name="image" property="og:image" content="./images/homepage_screenshot.png"/>
+    <meta name="image" property="og:image" content="https://www.gmjacobsdev.com/images/homepage_screenshot.png"/>
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Gabrielle Jacobs Portfolio | Front End Developer" />
     <meta name="twitter:description" content="Personal portfolio of Gabrielle Jacobs, a front-end web developer." />
-    <meta name="twitter:image:src" content="./images/homepage_screenshot.png">
+    <meta name="twitter:image:src" content="https://www.gmjacobsdev.com/images/homepage_screenshot.png">
     <meta name="twitter:image:alt" content="Homepage of portfolio. Black background with an avatar image of Gabrielle in the middle. Underneath are the words 'Hey, I'm Gabrielle Jacobs. Web Developer' in off-white. Under that are icon links that contact me via Github, LinkedIn, phone number, or email. On the left is a dark red full height vertical navigation.">
     <meta name="twitter:domain" content="https://www.gmjacobsdev.com">
     <!-- End Social Media Information -->
