Update twitter card style

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <meta name="keywords" content="html, html5, css, css3, bootstrap, sass, javascript, react, development, design, web, wordpress, black owned" />
     <!-- Social Media Information -->
     <meta name="image" property="og:image" content="https://www.gmjacobsdev.com/images/homepage_screenshot.png"/>
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Gabrielle Jacobs Portfolio | Front End Developer" />
     <meta name="twitter:description" content="Personal portfolio of Gabrielle Jacobs, a front-end web developer." />
     <meta name="twitter:image:src" content="https://www.gmjacobsdev.com/images/homepage_screenshot.png">
