--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="description" content="Personal portfolio of Gabrielle Jacobs, a front-end web developer with a React focus. Currently open to full time developer positions or freelance work for small businesses and nonprofits. Contact me for inquiries." />
+    <meta name="description" content="Personal portfolio of Gabrielle Jacobs, a front end web developer with a React focus. Currently open to full time developer positions or freelance work for small businesses and nonprofits. Contact me for inquiries." />
     <meta name="keywords" content="html, html5, css, css3, bootstrap, sass, javascript, react, development, design, web, wordpress, black owned" />
     <!-- Social Media Information -->
-    <meta property="og:description" content="Personal portfolio of Gabrielle Jacobs, a front-end web developer with a React focus. Contact me for inquiries.">
+    <meta property="og:description" content="Personal portfolio of Gabrielle Jacobs, a front end web developer with a React focus. Contact me for inquiries.">
     <meta name="image" property="og:image" content="https://www.gmjacobsdev.com/images/homepage_screenshot.png"/>
     <meta property="og:image:alt" content="Homepage of portfolio. Black background with an avatar image of Gabrielle in the middle. Underneath are the words 'Hey, I'm Gabrielle Jacobs. Web Developer' in off-white. Under that are icon links that contact me via Github, LinkedIn, phone number, or email. On the left is a dark red full height vertical navigation.">
     <meta name="twitter:card" content="summary_large_image" />
