--- a/public/index.html
+++ b/public/index.html
@@ -15,15 +15,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="description" content="Personal portfolio of Gabrielle Jacobs, a front end web developer with a React focus. Currently open to full time developer positions or freelance work for small businesses and nonprofits. Contact me for inquiries." />
-    <meta name="keywords" content="html, html5, css, css3, bootstrap, sass, javascript, react, development, design, web, wordpress, black owned" />
+    <meta name="description" content="Personal portfolio of Gabrielle Jacobs, an experienced web producer and front end web developer with a React focus. Currently open to full time positions, contracts, or freelance work for small businesses and nonprofits. Contact me for inquiries." />
+    <meta name="keywords" content="html, html5, css, css3, bootstrap, sass, javascript, react, development, design, web, wordpress, web producer, drupal, crownpeak, black owned" />
     <!-- Social Media Information -->
-    <meta property="og:description" content="Personal portfolio of Gabrielle Jacobs, a front end web developer with a React focus. Contact me for inquiries.">
+    <meta property="og:description" content="Personal portfolio of Gabrielle Jacobs, an experienced web producer and front end web developer with a React focus. Contact me for inquiries.">
     <meta name="image" property="og:image" content="https://www.gmjacobsdev.com/images/homepage_screenshot.png"/>
     <meta property="og:image:alt" content="Homepage of portfolio. Black background with an avatar image of Gabrielle in the middle. Underneath are the words 'Hey, I'm Gabrielle Jacobs. Web Developer' in off-white. Under that are icon links that contact me via Github, LinkedIn, phone number, or email. On the left is a dark red full height vertical navigation.">
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Gabrielle Jacobs Portfolio | Front End Developer" />
-    <meta name="twitter:description" content="Personal portfolio of Gabrielle Jacobs, a front end web developer with a React focus. Contact me for inquiries." />
+    <meta name="twitter:title" content="Gabrielle Jacobs Portfolio | Web Producer & Front End Developer" />
+    <meta name="twitter:description" content="Personal portfolio of Gabrielle Jacobs, an experienced web producer and front end web developer with a React focus. Contact me for inquiries." />
     <meta name="twitter:image:src" content="https://www.gmjacobsdev.com/images/homepage_screenshot.png">
     <meta name="twitter:image:alt" content="Homepage of portfolio. Black background with an avatar image of Gabrielle in the middle. Underneath are the words 'Hey, I'm Gabrielle Jacobs. Web Developer' in off-white. Under that are icon links that contact me via Github, LinkedIn, phone number, or email. On the left is a dark red full height vertical navigation.">
     <meta name="twitter:domain" content="https://www.gmjacobsdev.com">
@@ -32,7 +32,7 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:600|PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="css/styles.css">
-    <title>Gabrielle Jacobs Portfolio | Front End Developer</title>
+    <title>Gabrielle Jacobs Portfolio | Web Producer & Front End Developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
